packages/ui-library/src/css/inputs.scss
/* ... */
.input-filedrop {
    box-sizing: border-box;
    position: relative;
    border: 1px dashed $color-strong-neutral-30;
    padding: $spacing-lg;
    text-align: center;
    height: 95px;
    background-color: $color-white;
    color: $color-strong-neutral-20;
    @include font-pn-light;
    border-radius: 2px;
    line-height: 1em;
    margin-bottom: $spacing-lg;

    label {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        margin: 0;
        text-transform: none;
        font-size: 15px;
        cursor: pointer;
        @include font-pn-light;
    }
    input[type=file] {
        opacity: 0;
        position: absolute;
        z-index: $zindex__hidden;
    }
}

.input-filedrop--hover,
.input-filedrop--hover.input-filedrop--selected {
    background: #e4ecf2;
}

.input-filedrop--selected {
    background: lighten($color-success-green, 40%);

    label {
        position: relative;
        display: inline-block;
        vertical-align: middle;
        top: auto;
        bottom: auto;
        left: auto;
        right: auto;
    }
}

.input-filedrop__upload-text,
.input-filedrop__selected-content {
    @include vertical-align;
}

.input-filedrop__upload-text {
    font-size: 14px;
    line-height: 1.3em;
}

.input-filedrop__selected-content {
    font-size: 15px;
}

.input-filedrop__selected-text {
    display: inline-block;
    max-width: 50%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: middle;
}

.input-filedrop__link {
    color: $color-active-blue;
    vertical-align: middle;
    cursor: pointer;
}

.input-filedrop__divider {
    margin: 0 0 0 15px;
    padding: 0 0 0 15px;
    border-left: 1px solid $color-strong-neutral-30;
}

.input-filedrop__icon {
    background-color: $color-success;
    margin: 0 $spacing-md 0 0;
}

.input-toggle {
    $toggle-height: 24px;
    $toggle-width: 40px;
    $toggle-time: 0.1s;

    $toggle-diameter: $toggle-height - 2;
    $toggle-border-radius: ceil($toggle-height / 2) + 1;

    display: inline-block;

    .toggle {
        position: relative;
        height: $toggle-height - 2;
        width: $toggle-width - 2;
        background-color: $color-stratus;
        display: inline-block;
        vertical-align: middle;
        box-sizing: border-box;
        border: 1px solid $color-stratus;
        cursor: pointer;

        @include border-radius($toggle-border-radius);
        @include transition(all $toggle-time);

        &:after {
            content: '';
            background-color: $color-white;
            position: absolute;
            left: 0;
            top: 0;
            height: $toggle-diameter - 2;
            width: $toggle-diameter - 2;
            box-sizing: border-box;

            @include border-radius($toggle-border-radius);
            @include transition(all $toggle-time);
            @include box-shadow((1px 1px 3px 0 rgba(0, 0, 0, 0.3)));
        }
    }
    &.selected {
        .toggle {
            background-color: $color-success;
            border-color: $color-success;

            &:after {
                left: $toggle-width - $toggle-diameter - 1;
            }
        }
    }
    &.locked:not(.selected) {
        .toggle {
            background-color: $color-warning-icon-yellow;
            border-color: $color-warning-icon-yellow;
        }
    }
    &.small {
        .toggle {
            $toggle-height: 18px;
            $toggle-width: 30px;
            $toggle-diameter: $toggle-height - 2;

            height: $toggle-height;
            width: $toggle-width;

            &:after {
                height: $toggle-diameter;
                width: $toggle-diameter;
            }
        }
        &.selected {
            .toggle {
                &:after {
                    left: $toggle-width - $toggle-diameter - 1; //13px
                }
            }
        }
    }
}
/* ... */

